--- a/assets/style.css
+++ b/assets/style.css
@@ -56,3 +56,12 @@ body{
 h2{
     color: white;
 }
+footer{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: 40px;
+    background:darkkhaki;
+    color: black;
+    text-align: center;
+}
